<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.github.shell88</groupId>
	<version>0.1-beta.3</version>
	<artifactId>bdd-videoannotator-sample</artifactId>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>
	<name>${project.groupId}:${project.artifactId}</name>
	<description>BDD Videoannotator enables BDD-Frameworks like Cucumber-JVM to capture testruns with an annotated screencast. To support different BDD-Frameworks BDD-Videoannotator conists of a SOAP-based server component and a clientside adapter.</description>
	<developers>
		<developer>
			<name>Stefan Hell</name>
			<email>stefan88hell@gmail.com</email>
		</developer>
	</developers>
	<licenses>
		<license>
			<name>The Apache Software License, Version 2.0</name>
			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
			<distribution>repo</distribution>
		</license>
	</licenses>
	<scm>
		<connection>scm:git:https://github.com/shell88/bdd_videoannotator.git</connection>
		<developerConnection>scm:git:https://github.com/shell88/bdd_videoannotator.git</developerConnection>
		<url>https://github.com/shell88/bdd_videoannotator</url>
	</scm>
	<issueManagement>
		<system>GitHub Issues</system>
		<url>https://github.com/shell88/bdd_videoannotator/issues</url>
	</issueManagement>
	<dependencies>
		<dependency>
			<groupId>info.cukes</groupId>
			<artifactId>cucumber-java</artifactId>
			<version>1.2.2</version>
		</dependency>
		<dependency>
			<groupId>info.cukes</groupId>
			<artifactId>cucumber-core</artifactId>
			<version>1.2.2</version>
		</dependency>
		<dependency>
			<groupId>info.cukes</groupId>
			<artifactId>cucumber-junit</artifactId>
			<version>1.2.2</version>
		</dependency>
		<dependency>
			<groupId>com.pojosontheweb</groupId>
			<artifactId>monte-repack</artifactId>
			<version>1.0.1</version>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
			<version>3.4</version>
		</dependency>
		<dependency>
			<groupId>org.seleniumhq.selenium</groupId>
			<artifactId>selenium-java</artifactId>
			<version>2.45.0</version>
		</dependency>
		<dependency>
			<groupId>com.github.shell88</groupId>
			<artifactId>bdd-videoannotator-server</artifactId>
			<version>0.1-beta.3</version>
		</dependency>
		<dependency>
			<groupId>com.github.shell88</groupId>
			<artifactId>bdd-videoannotator-java</artifactId>
			<version>0.1-beta.3</version>
		</dependency>
	</dependencies>
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.1</version>
				<configuration>
					<source>1.6</source>
					<target>1.6</target>
					<encoding>${project.build.sourceEncoding}</encoding>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-resources-plugin</artifactId>
				<version>2.6</version>
				<configuration>
					<encoding>${project.build.sourceEncoding}</encoding>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.15</version>
				<configuration>
					<argLine>-Duser.language=en</argLine>
					<argLine>-Xmx1024m</argLine>
					<argLine>-XX:MaxPermSize=256m</argLine>
					<argLine>-Dfile.encoding=UTF-8</argLine>
					<useFile>false</useFile>
				</configuration>
			</plugin>
		</plugins>
		 <resources>
        <resource>
            <directory>${basedir}/src/test/resources</directory>
            <includes>
                <include>**.*</include>
            </includes>
        </resource>
     </resources>
	</build>
</project>